--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
         "tailwindcss"
+    ],
+    "cSpell.ignoreWords": [
+        "center",
+        "justify"
     ]
 }
