--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,23 @@
 {
 	"name": "server",
 	"version": "1.0.0",
-	"main": "index.js",
+	"description": "This is api for connect chat application",
+	"main": "app.js",
 	"scripts": {
-		"start": "src/index.js"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon src/app.js"
 	},
-	"keywords": [],
-	"author": "",
+	"author": "Shahjalal",
 	"license": "ISC",
-	"description": "",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
+		"dotenv": "^9.0.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.12.6",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.12.7",
+		"morgan": "^1.10.0",
+		"socket.io": "^4.0.1",
 		"winston": "^3.3.3"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.7"
 	}
 }
